Fix scrollbar issue

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -25,6 +25,10 @@
     width: 2em;
 }
 
+.tb-toolbar-control {
+    margin: 0.3em 0.5em 0.3em 0.5em;
+}
+
 .accession-selector {
     white-space: nowrap;
     display: flex;
